--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-heroku==0.3.1
 filelock==3.0.12
 gunicorn==20.0.4
 idna==2.9
+Pillow==7.1.2
 psycopg2==2.8.5
 pytz==2020.1
 requests==2.23.0
